--- a/xr_3da/xrRender_R1/xrRender_R1.vcproj
+++ b/xr_3da/xrRender_R1/xrRender_R1.vcproj
@@ -55,6 +55,7 @@
 				SmallerTypeCheck="true"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
+				ForceConformanceInForLoopScope="false"
 				RuntimeTypeInfo="true"
 				UsePrecompiledHeader="2"
 				ProgramDataBaseFileName="$(IntDir)/"
@@ -148,6 +149,7 @@
 				ExceptionHandling="0"
 				RuntimeLibrary="2"
 				BufferSecurityCheck="false"
+				ForceConformanceInForLoopScope="false"
 				RuntimeTypeInfo="true"
 				UsePrecompiledHeader="2"
 				AssemblerOutput="4"
@@ -240,6 +242,7 @@
 				RuntimeLibrary="2"
 				BufferSecurityCheck="false"
 				EnableFunctionLevelLinking="false"
+				ForceConformanceInForLoopScope="false"
 				RuntimeTypeInfo="true"
 				UsePrecompiledHeader="2"
 				AssemblerOutput="0"
